--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <div class="article-inner">
               <div class="article-title">
                 <h3>뜨고 있는 뉴스 키워드</h3>
+                <span class="title-date">2022.04.25 08:00 기준</span>
               </div>
               <div class="article-content">
                 <div id="" class="article-rank-wrap">
@@ -76,43 +77,43 @@
                       <h4>정치</h4>
                       <ul class="rank-list">
                         <li class="rank-item item-subs">
-                          <p class="item-standing">1</p>
+                          <p class="item-standing">1위</p>
                           <span class="item-keyword">소득세</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">2</p>
+                          <p class="item-standing">2위</p>
                           <span class="item-keyword">갈등</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">3</p>
+                          <p class="item-standing">3위</p>
                           <span class="item-keyword">기본소득</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">4</p>
+                          <p class="item-standing">4위</p>
                           <span class="item-keyword">대선</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">5</p>
+                          <p class="item-standing">5위</p>
                           <span class="item-keyword">공천</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">6</p>
+                          <p class="item-standing">6위</p>
                           <span class="item-keyword">카카오</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">7</p>
+                          <p class="item-standing">7위</p>
                           <span class="item-keyword">SKT</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">8</p>
+                          <p class="item-standing">8위</p>
                           <span class="item-keyword">메타버스</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">9</p>
+                          <p class="item-standing">9위</p>
                           <span class="item-keyword">디지털자산</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">10</p>
+                          <p class="item-standing">10위</p>
                           <span class="item-keyword">NFT</span>
                         </li>
                       </ul>
@@ -121,43 +122,43 @@
                       <h4>경제</h4>
                       <ul class="rank-list">
                         <li class="rank-item item-subs">
-                          <p class="item-standing">1</p>
+                          <p class="item-standing">1위</p>
                           <span class="item-keyword">소득세</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">2</p>
+                          <p class="item-standing">2위</p>
                           <span class="item-keyword">갈등</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">3</p>
+                          <p class="item-standing">3위</p>
                           <span class="item-keyword">기본소득</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">4</p>
+                          <p class="item-standing">4위</p>
                           <span class="item-keyword">대선</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">5</p>
+                          <p class="item-standing">5위</p>
                           <span class="item-keyword">공천</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">6</p>
+                          <p class="item-standing">6위</p>
                           <span class="item-keyword">카카오</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">7</p>
+                          <p class="item-standing">7위</p>
                           <span class="item-keyword">SKT</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">8</p>
+                          <p class="item-standing">8위</p>
                           <span class="item-keyword">메타버스</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">9</p>
+                          <p class="item-standing">9위</p>
                           <span class="item-keyword">디지털자산</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">10</p>
+                          <p class="item-standing">10위</p>
                           <span class="item-keyword">NFT</span>
                         </li>
                       </ul>
@@ -166,43 +167,43 @@
                       <h4>사회</h4>
                       <ul class="rank-list">
                         <li class="rank-item item-subs">
-                          <p class="item-standing">1</p>
+                          <p class="item-standing">1위</p>
                           <span class="item-keyword">소득세</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">2</p>
+                          <p class="item-standing">2위</p>
                           <span class="item-keyword">갈등</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">3</p>
+                          <p class="item-standing">3위</p>
                           <span class="item-keyword">기본소득</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">4</p>
+                          <p class="item-standing">4위</p>
                           <span class="item-keyword">대선</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">5</p>
+                          <p class="item-standing">5위</p>
                           <span class="item-keyword">공천</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">6</p>
+                          <p class="item-standing">6위</p>
                           <span class="item-keyword">카카오</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">7</p>
+                          <p class="item-standing">7위</p>
                           <span class="item-keyword">SKT</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">8</p>
+                          <p class="item-standing">8위</p>
                           <span class="item-keyword">메타버스</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">9</p>
+                          <p class="item-standing">9위</p>
                           <span class="item-keyword">디지털자산</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">10</p>
+                          <p class="item-standing">10위</p>
                           <span class="item-keyword">NFT</span>
                         </li>
                       </ul>
@@ -211,43 +212,43 @@
                       <h4>IT·과학</h4>
                       <ul class="rank-list">
                         <li class="rank-item item-subs">
-                          <p class="item-standing">1</p>
+                          <p class="item-standing">1위</p>
                           <span class="item-keyword">소득세</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">2</p>
+                          <p class="item-standing">2위</p>
                           <span class="item-keyword">갈등</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">3</p>
+                          <p class="item-standing">3위</p>
                           <span class="item-keyword">기본소득</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">4</p>
+                          <p class="item-standing">4위</p>
                           <span class="item-keyword">대선</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">5</p>
+                          <p class="item-standing">5위</p>
                           <span class="item-keyword">공천</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">6</p>
+                          <p class="item-standing">6위</p>
                           <span class="item-keyword">카카오</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">7</p>
+                          <p class="item-standing">7위</p>
                           <span class="item-keyword">SKT</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">8</p>
+                          <p class="item-standing">8위</p>
                           <span class="item-keyword">메타버스</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">9</p>
+                          <p class="item-standing">9위</p>
                           <span class="item-keyword">디지털자산</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">10</p>
+                          <p class="item-standing">10위</p>
                           <span class="item-keyword">NFT</span>
                         </li>
                       </ul>
@@ -256,43 +257,43 @@
                       <h4>연예</h4>
                       <ul class="rank-list">
                         <li class="rank-item item-subs">
-                          <p class="item-standing">1</p>
+                          <p class="item-standing">1위</p>
                           <span class="item-keyword">소득세</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">2</p>
+                          <p class="item-standing">2위</p>
                           <span class="item-keyword">갈등</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">3</p>
+                          <p class="item-standing">3위</p>
                           <span class="item-keyword">기본소득</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">4</p>
+                          <p class="item-standing">4위</p>
                           <span class="item-keyword">대선</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">5</p>
+                          <p class="item-standing">5위</p>
                           <span class="item-keyword">공천</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">6</p>
+                          <p class="item-standing">6위</p>
                           <span class="item-keyword">카카오</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">7</p>
+                          <p class="item-standing">7위</p>
                           <span class="item-keyword">SKT</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">8</p>
+                          <p class="item-standing">8위</p>
                           <span class="item-keyword">메타버스</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">9</p>
+                          <p class="item-standing">9위</p>
                           <span class="item-keyword">디지털자산</span>
                         </li>
                         <li class="rank-item item-subs">
-                          <p class="item-standing">10</p>
+                          <p class="item-standing">10위</p>
                           <span class="item-keyword">NFT</span>
                         </li>
                       </ul>
@@ -837,21 +838,21 @@
                 <span class="title-more"><a href="#">더 보기</a></span>
               </div>
               <div class="article-content">
-                <div class="article-list-wrap">
-                  <ul class="thumb-list">
-                    <li class="thumb-item">
+                <div id="buzzNewsSwpContainer" class="article-list-wrap swiper-container">
+                  <ul class="thumb-list swiper-wrapper">
+                    <li class="thumb-item swiper-slide">
                       <a href="#" class="link-area" target="_blank">
                         <div class="thumb-img"><img src="./src/img/main/buzz_2202.png" alt="버즈메트릭스 22년 02월 뉴스"></div>
                         <p class="thumb-title">2022년 2월호 가상인간</p>
                       </a>
                     </li>
-                    <li class="thumb-item">
+                    <li class="thumb-item swiper-slide">
                       <a href="#" class="link-area" target="_blank">
                         <div class="thumb-img"><img src="./src/img/main/buzz_2112.png" alt="버즈메트릭스 21년 12월 뉴스"></div>
                         <p class="thumb-title">2021년 12월호 밀키트</p>
                       </a>
                     </li>
-                    <li class="thumb-item">
+                    <li class="thumb-item swiper-slide">
                       <a href="#" class="link-area" target="_blank">
                         <div class="thumb-img"><img src="./src/img/main/buzz_2111.png" alt="버즈메트릭스 21년 11월 뉴스"></div>
                         <p class="thumb-title">2022년 2월호 숏폼</p>
