--- a/trend.html
+++ b/trend.html
@@ -845,7 +845,10 @@
                 <div id="kwdTrdSwpContainer" class="article-rank-wrap swiper-container" dir="rtl">
                   <div class="trend-rank-wrap swiper-wrapper">
                     <div class="trend-rank-list swiper-slide">
-                      <h4>22년 4월 1주차</h4>
+                      <div class="trend-rank-title clearFix" dir="ltr">
+                        <h4 dir="ltr">22년 4월 1주차</h4>
+                        <span class="trend-term">2022.04.04~04.10</span>
+                      </div>
                       <ul class="rank-list" dir="ltr">
                         <li class="rank-item item-title">
                           <p class="item-standing">순위</p>
@@ -916,7 +919,10 @@
                       </ul>
                     </div>
                     <div class="trend-rank-list swiper-slide">
-                      <h4>22년 3월 5주차</h4>
+                      <div class="trend-rank-title clearFix" dir="ltr">
+                        <h4 dir="ltr">22년 3월 5주차</h4>
+                        <span class="trend-term">2022.04.04~04.10</span>
+                      </div>
                       <ul class="rank-list" dir="ltr">
                         <li class="rank-item item-title">
                           <p class="item-standing">순위</p>
@@ -987,7 +993,10 @@
                       </ul>
                     </div>
                     <div class="trend-rank-list swiper-slide">
-                      <h4>22년 3월 4주차</h4>
+                      <div class="trend-rank-title clearFix" dir="ltr">
+                        <h4 dir="ltr">22년 3월 4주차</h4>
+                        <span class="trend-term">2022.04.04~04.10</span>
+                      </div>
                       <ul class="rank-list" dir="ltr">
                         <li class="rank-item item-title">
                           <p class="item-standing">순위</p>
@@ -1058,7 +1067,10 @@
                       </ul>
                     </div>
                     <div class="trend-rank-list swiper-slide">
-                      <h4>22년 3월 3주차</h4>
+                      <div class="trend-rank-title clearFix" dir="ltr">
+                        <h4 dir="ltr">22년 3월 3주차</h4>
+                        <span class="trend-term">2022.04.04~04.10</span>
+                      </div>
                       <ul class="rank-list" dir="ltr">
                         <li class="rank-item item-title">
                           <p class="item-standing">순위</p>
@@ -1129,7 +1141,10 @@
                       </ul>
                     </div>
                     <div class="trend-rank-list swiper-slide">
-                      <h4>22년 3월 2주차</h4>
+                      <div class="trend-rank-title clearFix" dir="ltr">
+                        <h4 dir="ltr">22년 3월 2주차</h4>
+                        <span class="trend-term">2022.04.04~04.10</span>
+                      </div>
                       <ul class="rank-list" dir="ltr">
                         <li class="rank-item item-title">
                           <p class="item-standing">순위</p>
@@ -1200,7 +1215,10 @@
                       </ul>
                     </div>
                     <div class="trend-rank-list swiper-slide">
-                      <h4>22년 3월 1주차</h4>
+                      <div class="trend-rank-title clearFix" dir="ltr">
+                        <h4 dir="ltr">22년 3월 1주차</h4>
+                        <span class="trend-term">2022.04.04~04.10</span>
+                      </div>
                       <ul class="rank-list" dir="ltr">
                         <li class="rank-item item-title">
                           <p class="item-standing">순위</p>
@@ -1271,7 +1289,10 @@
                       </ul>
                     </div>
                     <div class="trend-rank-list swiper-slide">
-                      <h4>22년 2월 4주차</h4>
+                      <div class="trend-rank-title clearFix" dir="ltr">
+                        <h4 dir="ltr">22년 2월 4주차</h4>
+                        <span class="trend-term">2022.04.04~04.10</span>
+                      </div>
                       <ul class="rank-list" dir="ltr">
                         <li class="rank-item item-title">
                           <p class="item-standing">순위</p>
@@ -1342,7 +1363,10 @@
                       </ul>
                     </div>
                     <div class="trend-rank-list swiper-slide">
-                      <h4>22년 2월 3주차</h4>
+                      <div class="trend-rank-title clearFix" dir="ltr">
+                        <h4 dir="ltr">22년 2월 3주차</h4>
+                        <span class="trend-term">2022.04.04~04.10</span>
+                      </div>
                       <ul class="rank-list" dir="ltr">
                         <li class="rank-item item-title">
                           <p class="item-standing">순위</p>
