220427 수 1635 - index.html > swiper slide 탑제 컨텐츠 동작 수정 및 추가 - 위 항목 컨텐츠 레이아웃 수정

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                 <span class="title-date">2022.04.25 08:00 기준</span>
               </div>
               <div class="article-content">
-                <div id="" class="article-rank-wrap">
-                  <div class="trend-rank-wrap">
-                    <div class="trend-rank-list">
+                <div id="idxTrdSwpContainer" class="article-rank-wrap index-trend-rank swiper-container">
+                  <ul class="trend-rank-wrap swiper-wrapper">
+                    <li class="trend-rank-list politics-list swiper-slide">
                       <h4>정치</h4>
                       <ul class="rank-list">
                         <li class="rank-item item-subs">
@@ -117,8 +117,8 @@
                           <span class="item-keyword">NFT</span>
                         </li>
                       </ul>
-                    </div>
-                    <div class="trend-rank-list">
+                    </li>
+                    <li class="trend-rank-list economy-list swiper-slide">
                       <h4>경제</h4>
                       <ul class="rank-list">
                         <li class="rank-item item-subs">
@@ -162,8 +162,8 @@
                           <span class="item-keyword">NFT</span>
                         </li>
                       </ul>
-                    </div>
-                    <div class="trend-rank-list">
+                    </li>
+                    <li class="trend-rank-list society-list swiper-slide">
                       <h4>사회</h4>
                       <ul class="rank-list">
                         <li class="rank-item item-subs">
@@ -207,8 +207,8 @@
                           <span class="item-keyword">NFT</span>
                         </li>
                       </ul>
-                    </div>
-                    <div class="trend-rank-list">
+                    </li>
+                    <li class="trend-rank-list science-list swiper-slide">
                       <h4>IT·과학</h4>
                       <ul class="rank-list">
                         <li class="rank-item item-subs">
@@ -252,8 +252,8 @@
                           <span class="item-keyword">NFT</span>
                         </li>
                       </ul>
-                    </div>
-                    <div class="trend-rank-list">
+                    </li>
+                    <li class="trend-rank-list entertainment-list swiper-slide">
                       <h4>연예</h4>
                       <ul class="rank-list">
                         <li class="rank-item item-subs">
@@ -297,7 +297,11 @@
                           <span class="item-keyword">NFT</span>
                         </li>
                       </ul>
-                    </div>
+                    </li>
+                  </ul>
+                  <div class="slide-btn-wrap">
+                    <p id="idxtrdPrev" class="slide-btn slide-left swiper-button-prev"></p>
+                    <p id="idxtrdNext" class="slide-btn slide-right swiper-button-next"></p>
                   </div>
                 </div>
               </div>
@@ -855,10 +859,20 @@
                     <li class="thumb-item swiper-slide">
                       <a href="#" class="link-area" target="_blank">
                         <div class="thumb-img"><img src="./src/img/main/buzz_2111.png" alt="버즈메트릭스 21년 11월 뉴스"></div>
-                        <p class="thumb-title">2022년 2월호 숏폼</p>
+                        <p class="thumb-title">2022년 11월호 숏폼</p>
+                      </a>
+                    </li>
+                    <li class="thumb-item swiper-slide">
+                      <a href="#" class="link-area" target="_blank">
+                        <div class="thumb-img"><img src="./src/img/main/buzz_2111.png" alt="버즈메트릭스 21년 11월 뉴스"></div>
+                        <p class="thumb-title">2022년 10월호 숏폼</p>
                       </a>
                     </li>
                   </ul>
+                  <!-- <div class="slide-btn-wrap">
+                    <p id="buzzNewsPrev" class="slide-btn slide-left swiper-button-prev"></p>
+                    <p id="buzzNewsNext" class="slide-btn slide-right swiper-button-next"></p>
+                  </div> -->
                 </div>
               </div>
             </div>
