--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
               </div>
               <div class="article-content">
                 <div id="idxTrdSwpContainer" class="article-rank-wrap index-trend-rank swiper-container">
+                  <div class="swiper-pagination"></div>
                   <ul class="trend-rank-wrap swiper-wrapper">
                     <li class="trend-rank-list politics-list swiper-slide">
                       <h4>정치</h4>
