--- a/footer.html
+++ b/footer.html
@@ -23,6 +23,13 @@
     <p class="go-top-btn"><img src="./src/img/icon/icon-go-top.svg" alt="go top"></p>
   </div>
 
+  <div id="loading">
+    <div class="loading-bg">
+      <p class="loading-title">키워드에 대한 정보를 수집 중입니다.</p>
+    </div>
+    <div class="dots-flow"></div>
+  </div>
+
   <div id="modal">
     <!-- <div id="modalBg"></div> -->
 
