220428 금 1529 - now.html > engagement > 아이콘 추가 - now.html > engagement > 레이아웃 수정 및 반응형 조정

--- a/now.html
+++ b/now.html
@@ -74,15 +74,6 @@
               </div>
               <div class="article-content">
                 <div class="article-chart-wrap main-chart-wrap">
-                  <!-- div class="chart-sample chart-area">
-                    <div class="chart-pie">
-                      <div class="value-engagement">
-                        <div class="item-color cht-grey"></div>
-                        <h4 class="item-title">ENGAGEMENT</h4>
-                        <p class="item-num">150,329</p>
-                      </div>
-                    </div>
-                  </div -->
                   <div class="chart-info-area">
                     <ul class="chart-info-list">
                       <li class="info-item info-engagement">
@@ -92,22 +83,22 @@
                       </li>
                       <li class="info-item info-views">
                         <!-- <div class="item-color cht-gr"></div> -->
-                        <h4 class="item-title">VIEWS</h4>
+                        <h4 class="item-title"><em class="item-icon"></em>VIEWS</h4>
                         <p class="item-num">120,000</p>
                       </li>
                       <li class="info-item info-comments">
                         <!-- <div class="item-color cht-bl"></div> -->
-                        <h4 class="item-title">COMMENTS</h4>
+                        <h4 class="item-title"><em class="item-icon"></em>COMMENTS</h4>
                         <p class="item-num">20,000</p>
                       </li>
                       <li class="info-item info-likes">
                         <!-- <div class="item-color cht-yl"></div> -->
-                        <h4 class="item-title">LIKES</h4>
+                        <h4 class="item-title"><em class="item-icon"></em>LIKES</h4>
                         <p class="item-num">9,872</p>
                       </li>
                       <li class="info-item info-shares">
                         <!-- <div class="item-color cht-or"></div> -->
-                        <h4 class="item-title">SHARES</h4>
+                        <h4 class="item-title"><em class="item-icon"></em>SHARES</h4>
                         <p class="item-num">457</p>
                       </li>
                     </ul>
