--- a/userPreset.html
+++ b/userPreset.html
@@ -34,14 +34,14 @@
                 <h3 class="user-page-name">야무진진눈깨비</h3>
               </div>
               <div class="article-content">
-                <div class="user-page-title">
+                <div class="user-title-wrap">
                   <!-- 유저 페이지 모두 같은 셑 -->
                   <ul class="user-title-list">
                     <li class="user-title">검색 설정 관리</li>
                   </ul>
                 </div>
 
-                <div class="user-preset-wrap">
+                <div class="user-setting-wrap">
 
                 </div>
               </div>
