--- a/footer.html
+++ b/footer.html
@@ -387,6 +387,12 @@
                     </li>
                     <li><input type="text" id='loginPass' class='input-pw' placeholder='비밀번호를 입력해주세요'></li>
                   </ul>
+                  <div class="login-option clearFix">
+                    <p class="id-remember">
+                      <input type="checkbox" id="idRmbr">
+                      <label for="idRmbr">아이디 기억하기</label>
+                    </p>
+                  </div>
                   <div class="btn-wrap">
                     <div id="loginClsBtn" class="cancel-btn"><a href="#" class='btn'>닫기</a></div>
                     <div id="loginBtn"><a href="#" class='btn'>로그인</a></div>
