--- a/now.html
+++ b/now.html
@@ -590,7 +590,10 @@
                 <div class="article-card-wrap detail-card-wrap">
                   <ul class="detail-card-list">
                     <li class="card-item card-sns">
-                      <h4 class="item-title">SNS</h4>
+                      <div class="item-title-wrap clearFix">
+                        <p class="icon-area icon-sns"></p>
+                        <h4 class="item-title">SNS</h4>
+                      </div>
                       <ul class="card-sub-list">
                         <li class="sub-item item-posts">
                           <p class="sub-title">POSTS</p>
@@ -619,7 +622,10 @@
                       </ul>
                     </li>
                     <li class="card-item card-community">
-                      <h4 class="item-title">COMMUNITY</h4>
+                      <div class="item-title-wrap clearFix">
+                        <p class="icon-area icon-commu"></p>
+                        <h4 class="item-title">COMMUNITY</h4>
+                      </div>
                       <ul class="card-sub-list">
                         <li class="sub-item item-posts">
                           <p class="sub-title">POSTS</p>
@@ -645,10 +651,16 @@
                           <p class="sub-title sub-shares">SHARES</p>
                           <span class="sub-subs sub-num">17,115</span>
                         </li>
+                        <!-- <li class="sub-item item-icon">
+                          <p class="icon-area icon-commu"></p>
+                        </li> -->
                       </ul>
                     </li>
                     <li class="card-item card-blog">
-                      <h4 class="item-title">BLOG</h4>
+                      <div class="item-title-wrap clearFix">
+                        <p class="icon-area icon-blog"></p>
+                        <h4 class="item-title">BLOG</h4>
+                      </div>
                       <ul class="card-sub-list">
                         <li class="sub-item item-posts">
                           <p class="sub-title">POSTS</p>
@@ -677,7 +689,10 @@
                       </ul>
                     </li>
                     <li class="card-item card-cafe">
-                      <h4 class="item-title">CAFE</h4>
+                      <div class="item-title-wrap clearFix">
+                        <p class="icon-area icon-cafe"></p>
+                        <h4 class="item-title">CAFE</h4>
+                      </div>
                       <ul class="card-sub-list">
                         <li class="sub-item item-posts">
                           <p class="sub-title">POSTS</p>
@@ -706,7 +721,10 @@
                       </ul>
                     </li>
                     <li class="card-item card-news">
-                      <h4 class="item-title">NEWS</h4>
+                      <div class="item-title-wrap clearFix">
+                        <p class="icon-area icon-news"></p>
+                        <h4 class="item-title">NEWS</h4>
+                      </div>
                       <ul class="card-sub-list">
                         <li class="sub-item item-posts">
                           <p class="sub-title">POSTS</p>
