--- a/now.html
+++ b/now.html
@@ -597,7 +597,8 @@
                       <ul class="card-sub-list">
                         <li class="sub-item item-posts">
                           <p class="sub-title">POSTS</p>
-                          <div class="sub-subs chart-horicontal"></div>
+                          <!-- <div class="sub-subs chart-horicontal"></div> -->
+                          <span class="sub-subs sub-num">17,115</span>
                         </li>
                         <li class="sub-item item-engagement">
                           <p class="sub-title">ENGAGEMENT</p>
@@ -620,6 +621,9 @@
                           <span class="sub-subs sub-num">17,115</span>
                         </li>
                       </ul>
+                      <div class="more-btn-wrap">
+                        <p class="more-btn">원문 보기</p>
+                      </div>
                     </li>
                     <li class="card-item card-community">
                       <div class="item-title-wrap clearFix">
@@ -629,7 +633,8 @@
                       <ul class="card-sub-list">
                         <li class="sub-item item-posts">
                           <p class="sub-title">POSTS</p>
-                          <div class="sub-subs chart-horicontal"></div>
+                          <!-- <div class="sub-subs chart-horicontal"></div> -->
+                          <span class="sub-subs sub-num">17,115</span>
                         </li>
                         <li class="sub-item item-engagement">
                           <p class="sub-title">ENGAGEMENT</p>
@@ -655,6 +660,9 @@
                           <p class="icon-area icon-commu"></p>
                         </li> -->
                       </ul>
+                      <div class="more-btn-wrap">
+                        <p class="more-btn">원문 보기</p>
+                      </div>
                     </li>
                     <li class="card-item card-blog">
                       <div class="item-title-wrap clearFix">
@@ -664,7 +672,8 @@
                       <ul class="card-sub-list">
                         <li class="sub-item item-posts">
                           <p class="sub-title">POSTS</p>
-                          <div class="sub-subs chart-horicontal"></div>
+                          <!-- <div class="sub-subs chart-horicontal"></div> -->
+                          <span class="sub-subs sub-num">17,115</span>
                         </li>
                         <li class="sub-item item-engagement">
                           <p class="sub-title">ENGAGEMENT</p>
@@ -687,6 +696,9 @@
                           <span class="sub-subs sub-num">17,115</span>
                         </li>
                       </ul>
+                      <div class="more-btn-wrap">
+                        <p class="more-btn">원문 보기</p>
+                      </div>
                     </li>
                     <li class="card-item card-cafe">
                       <div class="item-title-wrap clearFix">
@@ -696,7 +708,8 @@
                       <ul class="card-sub-list">
                         <li class="sub-item item-posts">
                           <p class="sub-title">POSTS</p>
-                          <div class="sub-subs chart-horicontal"></div>
+                          <!-- <div class="sub-subs chart-horicontal"></div> -->
+                          <span class="sub-subs sub-num">17,115</span>
                         </li>
                         <li class="sub-item item-engagement">
                           <p class="sub-title">ENGAGEMENT</p>
@@ -719,6 +732,9 @@
                           <span class="sub-subs sub-num">17,115</span>
                         </li>
                       </ul>
+                      <div class="more-btn-wrap">
+                        <p class="more-btn">원문 보기</p>
+                      </div>
                     </li>
                     <li class="card-item card-news">
                       <div class="item-title-wrap clearFix">
@@ -728,7 +744,8 @@
                       <ul class="card-sub-list">
                         <li class="sub-item item-posts">
                           <p class="sub-title">POSTS</p>
-                          <div class="sub-subs chart-horicontal"></div>
+                          <!-- <div class="sub-subs chart-horicontal"></div> -->
+                          <span class="sub-subs sub-num">17,115</span>
                         </li>
                         <li class="sub-item item-engagement">
                           <p class="sub-title">ENGAGEMENT</p>
@@ -751,6 +768,9 @@
                           <span class="sub-subs sub-num">17,115</span>
                         </li>
                       </ul>
+                      <div class="more-btn-wrap">
+                        <p class="more-btn">원문 보기</p>
+                      </div>
                     </li>
                   </ul>
                 </div>
